[package]
name = "serde_bytes_base64"
version = "0.1.0"
authors = ["dedefer <ddf1998@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["serde", "base64", "bytes", "b64"]
categories = []
repository = "https://github.com/dedefer/serde_bytes_base64"
homepage = "https://github.com/dedefer/serde_bytes_base64"
description = "Wrapper for Vec<u8>, which uses base64 string as serde representation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1" }
base64 = { version = "0.13" }

[dev-dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }
